--- a/app/farmatec/public/index.html
+++ b/app/farmatec/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="logo512.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>FarmaTEC</title>
   </head>
 
   <body>
